--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "node_demo",
   "version": "0.0.1",
   "devDependencies": {
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "mongodb": "^2.2.16"
   }
 }
