--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "devDependencies": {
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "jade": "^1.11.0",
     "mongodb": "^2.2.16"
   }
